--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm": "^10.9.1",
     "pug": "^3.0.3",
     "react": "^18.3.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
